--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
 
     <div class="poster" id="poster">
-      <div class="matchday" id="matchday">1. kolejka</div>
+      <div class="matchday" id="matchday">1. kolejka "B" Klasa Warszawa Grupa I</div>
 
       <div class="logos">
         <img id="logoA" class="logo left" src="" alt="Logo A" />
