--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
     </form>
 
     <div class="poster" id="poster">
-      <div class="matchday" id="matchday">1. kolejka "B" Klasa Warszawa Grupa I</div>
+      <div class="matchday" id="matchday">1. kolejka</div>
 
       <div class="logos">
         <img id="logoA" class="logo left" src="" alt="Logo A" />
         <img id="logoB" class="logo right" src="" alt="Logo B" />
       </div>
 
-      <div class="vs-bar">
+      <div class="vs-bar" id="vs-bar">
         <span class="team-name" id="teamA">Drużyna A</span>
         <span class="vs">VS</span>
         <span class="team-name" id="teamB">Drużyna B</span>
       </div>
 
-      <div class="info-bar">
+      <div class="info-bar" id="info-bar">
         <div class="info">
           <img src="assets/icons/calendar.svg" alt="Data" />
           <span id="date">2025-08-12</span>
