--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         <img id="logoB" class="logo right" src="" alt="Logo B" />
       </div>
 
-      <div class="vs-bar" id="vs-bar">
-        <span class="team-name" id="teamA">Drużyna A</span>
-        <span class="vs">VS</span>
-        <span class="team-name" id="teamB">Drużyna B</span>
-      </div>
+  <div class="vs-bar" id="vs-bar">
+  <div class="team team-left" id="teamA">Drużyna A</div>
+  <div class="vs">VS</div>
+  <div class="team team-right" id="teamB">Drużyna B</div>
+</div>
+
 
       <div class="info-bar" id="info-bar">
         <div class="info">
