--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <form id="match-form">
       <h2>Ustawienia meczu</h2>
       <label>Kolejka: <input type="text" id="matchday-input" /></label>
-      <label>Drużyna A: <input type="text" id="teamA-input" /></label>
-      <label>Logo A: <input type="file" id="logoA-input" accept="image/*" /></label>
-      <label>Drużyna B: <input type="text" id="teamB-input" /></label>
-      <label>Logo B: <input type="file" id="logoB-input" accept="image/*" /></label>
+      <label>Gospodarz: <input type="text" id="teamA-input" /></label>
+      <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
+      <label>Goście: <input type="text" id="teamB-input" /></label>
+      <label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label>
       <label>Data: <input type="date" id="date-input" /></label>
       <label>Godzina: <input type="time" id="time-input" /></label>
       <label>Miejsce: <input type="text" id="location-input" /></label>
