--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<!DOCTYPE html> <html lang="pl"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <title>Match Poster Generator</title> <link rel="stylesheet" href="style.css" /> <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script> </head> <body> <div class="container"> <form id="match-form"> <h2>Ustawienia meczu</h2> <label>Kolejka: <input type="text" id="matchday-input" /></label> <label>Gospodarz: <input type="text" id="teamA-input" /></label> <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label> <label>Goście: <input type="text" id="teamB-input" /></label> <label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label> <label>Data: <input type="date" id="date-input" /></label> <label>Godzina: <input type="time" id="time-input" /></label> <label>Miejsce: <input type="text" id="location-input" /></label> <button type="submit">Zastosuj</button> <button type="button" id="download-btn">📥 Pobierz plakat</button> </form> <div class="poster" id="poster"> <div class="matchday" id="matchday">1. kolejka "B" Klasa</div> <div class="logos"> <img id="logoA" class="logo left" src="" alt="Logo A" /> <img id="logoB" class="logo right" src="" alt="Logo B" /> </div> <div class="vs-bar" id="vs-bar"> <div class="team team-left" id="teamA">Drużyna A</div> <div class="vs">VS</div> <div class="team team-right" id="teamB">Drużyna B</div> </div> <div class="info-bar" id="info-bar"> <div class="info"> <img src="assets/icons/calendar.svg" alt="Data" /> <span id="date">2025-08-12</span> </div> <div class="info"> <img src="assets/icons/clock.svg" alt="Godzina" /> <span id="time">18:00</span> </div> <div class="info"> <img src="assets/icons/pin.svg" alt="Miejsce" /> <span id="location">Stadion Narodowy</span> </div> </div> </div> </div> <script src="script.js"></script> </body> </html>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Match Poster Generator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+</head>
+<body>
+  <div class="container">
+    <form id="match-form">
+      <h2>Ustawienia meczu</h2>
+      <label>Kolejka: <input type="text" id="matchday-input" /></label>
+      <label>Gospodarz: <input type="text" id="teamA-input" /></label>
+      <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
+      <label>Goście: <input type="text" id="teamB-input" /></label>
+      <label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label>
+      <label>Data: <input type="date" id="date-input" /></label>
+      <label>Godzina: <input type="time" id="time-input" /></label>
+      <label>Miejsce: <input type="text" id="location-input" /></label>
+      <button type="submit">Zastosuj</button>
+      <button type="button" id="download-btn">📥 Pobierz plakat</button>
+    </form>
+
+    <div class="poster" id="poster">
+      <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+
+      <div class="logos">
+        <img id="logoA" class="logo left" src="" alt="Logo A" />
+        <img id="logoB" class="logo right" src="" alt="Logo B" />
+      </div>
+
+  <div class="vs-bar" id="vs-bar">
+  <div class="team team-left" id="teamA">Drużyna A</div>
+  <div class="vs">VS</div>
+  <div class="team team-right" id="teamB">Drużyna B</div>
+</div>
+
+
+      <div class="info-bar" id="info-bar">
+        <div class="info">
+          <img src="assets/icons/calendar.svg" alt="Data" />
+          <span id="date">2025-08-12</span>
+        </div>
+        <div class="info">
+          <img src="assets/icons/clock.svg" alt="Godzina" />
+          <span id="time">18:00</span>
+        </div>
+        <div class="info">
+          <img src="assets/icons/pin.svg" alt="Miejsce" />
+          <span id="location">Stadion Narodowy</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
