--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
+  <div class="poster" id="poster">
+  <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" style="position:absolute;top:20px;left:20px;width:80px;height:auto;z-index:2;" />
+  <!-- ...pozostała zawartość... -->
+</div>
   <div class="container">
     <form id="match-form">
       <h2>Ustawienia meczu</h2>
+      <label>
+  Rodzaj meczu:
+  <select id="match-type">
+    <option value="liga">Liga</option>
+    <option value="puchar">Puchar</option>
+  </select>
+</label>
       <label>Kolejka: <input type="text" id="matchday-input" /></label>
       <label>Gospodarz: <input type="text" id="teamA-input" /></label>
       <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
