--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <div class="poster" id="poster">
-  <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" style="position:absolute;top:20px;left:20px;width:80px;height:auto;z-index:2;" />
-  <!-- ...pozostała zawartość... -->
-</div>
   <div class="container">
     <form id="match-form">
       <h2>Ustawienia meczu</h2>
       <label>
-  Rodzaj meczu:
-  <select id="match-type">
-    <option value="liga">Liga</option>
-    <option value="puchar">Puchar</option>
-  </select>
-</label>
-      <label>Kolejka: <input type="text" id="matchday-input" /></label>
-      <label>Gospodarz: <input type="text" id="teamA-input" /></label>
+        Rodzaj meczu:
+        <select id="match-type">
+          <option value="liga">Liga</option>
+          <option value="puchar">Puchar</option>
+        </select>
+      </label>
+      <label>Kolejka: <input type="text" id="matchday-input" placeholder="np. 1. kolejka &quot;B&quot; Klasa" /></label>
+      <label>Gospodarz: <input type="text" id="teamA-input" placeholder="Nazwa gospodarza" /></label>
       <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
-      <label>Goście: <input type="text" id="teamB-input" /></label>
+      <label>Goście: <input type="text" id="teamB-input" placeholder="Nazwa gości" /></label>
       <label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label>
       <label>Data: <input type="date" id="date-input" /></label>
       <label>Godzina: <input type="time" id="time-input" /></label>
-      <label>Miejsce: <input type="text" id="location-input" /></label>
-      <button type="submit">Zastosuj</button>
-      <button type="button" id="download-btn">📥 Pobierz plakat</button>
+      <label>Miejsce: <input type="text" id="location-input" placeholder="np. Stadion Narodowy" /></label>
+      <div style="margin-top:10px;">
+        <button type="submit">Zastosuj</button>
+        <button type="button" id="download-btn">📥 Pobierz plakat</button>
+        <button type="button" id="reset-btn">Wyczyść</button>
+      </div>
     </form>
 
     <div class="poster" id="poster">
+      <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" style="position:absolute;top:20px;left:20px;width:80px;height:auto;z-index:2;" />
       <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
 
       <div class="logos">
@@ -42,12 +42,11 @@
         <img id="logoB" class="logo right" src="" alt="Logo B" />
       </div>
 
-  <div class="vs-bar" id="vs-bar">
-  <div class="team team-left" id="teamA">Drużyna A</div>
-  <div class="vs">VS</div>
-  <div class="team team-right" id="teamB">Drużyna B</div>
-</div>
-
+      <div class="vs-bar" id="vs-bar">
+        <div class="team team-left" id="teamA">Drużyna A</div>
+        <div class="vs">VS</div>
+        <div class="team team-right" id="teamB">Drużyna B</div>
+      </div>
 
       <div class="info-bar" id="info-bar">
         <div class="info">
