--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
     </form>
 
     <div class="poster" id="poster">
-      <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" style="position:absolute;top:20px;left:20px;width:100px;height:auto;z-index:2;" />
-      <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+      <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" style="position:absolute;top:20px;left:20px;width:80px;height:auto;z-index:2;" />
+      <div class="matchday-bar-container">
+        <div class="matchday-bar" id="matchday-bar"></div>
+        <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+      </div>
 
       <div class="logos">
         <img id="logoA" class="logo left" src="" alt="Logo A" />
