--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
       <label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
       <label>Goście: <input type="text" id="teamB-input" placeholder="Nazwa gości" /></label>
       <label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label>
-      <label>Data: <input type="date" id="date-input" /></label>
-      <label>Godzina: <input type="time" id="time-input" /></label>
+      <label for="match-date">Data meczu</label>
+<input type="date" id="match-date" name="match-date">
+
+<label for="match-time">Godzina meczu</label>
+<input type="time" id="match-time" name="match-time">
       <label>Miejsce: <input type="text" id="location-input" placeholder="np. Stadion Narodowy" /></label>
       <div style="margin-top:10px;">
         <button type="submit">Zastosuj</button>
