--- a/index.html
+++ b/index.html
@@ -1,99 +1,78 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Match Poster Generator</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Bootstrap CSS for better date/time UX -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Match Poster Generator</title>
+<link rel="stylesheet" href="style.css" />
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
-  <div class="container">
-    <form id="match-form" class="needs-validation compact-menu" novalidate>
-      <h2 class="mb-2 fs-5">Ustawienia meczu</h2>
-      <div class="mb-2">
-        <label for="match-type" class="form-label small-label">Rodzaj meczu:</label>
-        <select id="match-type" class="form-select form-select-sm small-input">
-          <option value="liga">Liga</option>
-          <option value="puchar">Puchar</option>
-        </select>
-      </div>
-      <div class="mb-2">
-        <label for="matchday-input" class="form-label small-label">Kolejka:</label>
-        <input type="text" id="matchday-input" class="form-control form-control-sm small-input" placeholder="np. 1. kolejka &quot;B&quot; Klasa" />
-      </div>
-      <div class="mb-2">
-        <label for="teamA-input" class="form-label small-label">Gospodarz:</label>
-        <input type="text" id="teamA-input" class="form-control form-control-sm small-input" placeholder="Nazwa gospodarza" />
-      </div>
-      <div class="mb-2">
-        <label for="logoA-input" class="form-label small-label">Logo Gospodarz:</label>
-        <input type="file" id="logoA-input" class="form-control form-control-sm small-input" accept="image/*" />
-      </div>
-      <div class="mb-2">
-        <label for="teamB-input" class="form-label small-label">Goście:</label>
-        <input type="text" id="teamB-input" class="form-control form-control-sm small-input" placeholder="Nazwa gości" />
-      </div>
-      <div class="mb-2">
-        <label for="logoB-input" class="form-label small-label">Logo Goście:</label>
-        <input type="file" id="logoB-input" class="form-control form-control-sm small-input" accept="image/*" />
-      </div>
-      <div class="mb-2">
-        <label for="match-date" class="form-label small-label">Data meczu</label>
-        <input type="date" id="match-date" name="match-date" class="form-control form-control-sm small-input"/>
-      </div>
-      <div class="mb-2">
-        <label for="match-time" class="form-label small-label">Godzina meczu</label>
-        <input type="time" id="match-time" name="match-time" class="form-control form-control-sm small-input"/>
-      </div>
-      <div class="mb-2">
-        <label for="location-input" class="form-label small-label">Miejsce:</label>
-        <input type="text" id="location-input" class="form-control form-control-sm small-input" placeholder="np. Stadion Narodowy" />
-      </div>
-      <div class="mt-2 d-flex gap-2">
-        <button type="submit" class="btn btn-warning btn-sm">Zastosuj</button>
-        <button type="button" id="download-btn" class="btn btn-success btn-sm">📥 Pobierz plakat</button>
-        <button type="button" id="reset-btn" class="btn btn-secondary btn-sm">Wyczyść</button>
-      </div>
-    </form>
+<div class="container">
+<form id="match-form">
+<h2>Ustawienia meczu</h2>
+<label>
+Rodzaj meczu:
+<select id="match-type">
+<option value="liga">Liga</option>
+<option value="puchar">Puchar</option>
+</select>
+</label>
+<label>Kolejka: <input type="text" id="matchday-input" placeholder="np. 1. kolejka &quot;B&quot; Klasa" /></label>
+<label>Gospodarz: <input type="text" id="teamA-input" placeholder="Nazwa gospodarza" /></label>
+<label>Logo Gospodarz: <input type="file" id="logoA-input" accept="image/*" /></label>
+<label>Goście: <input type="text" id="teamB-input" placeholder="Nazwa gości" /></label>
+<label>Logo Goście: <input type="file" id="logoB-input" accept="image/*" /></label>
+      <label>Data: <input type="date" id="date-input" /></label>
+      <label>Godzina: <input type="time" id="time-input" /></label>
+      <label for="match-date">Data meczu</label>
+<input type="date" id="match-date" name="match-date">
 
-    <div class="poster" id="poster">
-      <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
-      <div class="matchday-bar-container">
-        <div class="matchday-bar" id="matchday-bar"></div>
-        <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
-      </div>
+<label for="match-time">Godzina meczu</label>
+<input type="time" id="match-time" name="match-time">
+<label>Miejsce: <input type="text" id="location-input" placeholder="np. Stadion Narodowy" /></label>
+<div style="margin-top:10px;">
+<button type="submit">Zastosuj</button>
+<button type="button" id="download-btn">📥 Pobierz plakat</button>
+<button type="button" id="reset-btn">Wyczyść</button>
+</div>
+</form>
 
-      <div class="logos">
-        <img id="logoA" class="logo left" src="" alt="Logo A" />
-        <img id="logoB" class="logo right" src="" alt="Logo B" />
-      </div>
+<div class="poster" id="poster">
+<img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
+<div class="matchday-bar-container">
+<div class="matchday-bar" id="matchday-bar"></div>
+<div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+</div>
 
-      <div class="vs-bar" id="vs-bar">
-        <div class="team team-left" id="teamA">Drużyna A</div>
-        <div class="vs">VS</div>
-        <div class="team team-right" id="teamB">Drużyna B</div>
-      </div>
+<div class="logos">
+<img id="logoA" class="logo left" src="" alt="Logo A" />
+<img id="logoB" class="logo right" src="" alt="Logo B" />
+</div>
 
-      <div class="info-bar" id="info-bar">
-        <div class="info">
-          <img src="assets/icons/calendar.svg" alt="Data" />
-          <span id="date">2025-08-12</span>
-        </div>
-        <div class="info">
-          <img src="assets/icons/clock.svg" alt="Godzina" />
-          <span id="time">18:00</span>
-        </div>
-        <div class="info">
-          <img src="assets/icons/pin.svg" alt="Miejsce" />
-          <span id="location">Stadion Narodowy</span>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="vs-bar" id="vs-bar">
+<div class="team team-left" id="teamA">Drużyna A</div>
+<div class="vs">VS</div>
+<div class="team team-right" id="teamB">Drużyna B</div>
+</div>
 
-  <script src="script.js"></script>
+<div class="info-bar" id="info-bar">
+<div class="info">
+<img src="assets/icons/calendar.svg" alt="Data" />
+<span id="date">2025-08-12</span>
+</div>
+<div class="info">
+<img src="assets/icons/clock.svg" alt="Godzina" />
+<span id="time">18:00</span>
+</div>
+<div class="info">
+<img src="assets/icons/pin.svg" alt="Miejsce" />
+<span id="location">Stadion Narodowy</span>
+</div>
+</div>
+</div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
