--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </label>
 
       <label>
-        Miejsce:
+        Miejsce spotkania:
         <input type="text" id="location-input" placeholder="np. Stadion Narodowy" />
       </label>
 
@@ -102,3 +102,11 @@
           <span id="time">18:00</span>
         </div>
         <div class="info">
+          <img src="assets/icons/pin.svg" alt="Miejsce" />
+          <span id="location">Stadion Narodowy</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
