--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Match Poster Generator</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- html2canvas do eksportu plakatu -->
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
-  <!-- Twój skrypt aplikacji -->
-  <script src="script.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" deferpt.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -73,7 +70,6 @@
     <div class="poster" id="poster">
       <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 
-      <!-- Pasek kolejki jako SVG (z polygonem), zamiast clip-path -->
       <div class="matchday-bar-container">
         <svg class="matchday-bar" width="100%" height="85" viewBox="0 0 100 85" preserveAspectRatio="none" aria-hidden="true">
           <polygon id="matchday-bar-shape" points="0,0 100,0 95,85 0,85" fill="#e4022e"></polygon>
