--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=1200, initial-scale=1.0"/>
   <title>Match Poster Generator</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" deferpt.js" defer></script>
+  https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -71,7 +72,7 @@
       <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 
       <div class="matchday-bar-container">
-        <svg class="matchday-bar" width="100%" height="85" viewBox="0 0 100 85" preserveAspectRatio="none" aria-hidden="true">
+        <svg class="matchday-bar" width="1080" height="85" viewBox="0 0 100 85" preserveAspectRatio="none" aria-hidden="true">
           <polygon id="matchday-bar-shape" points="0,0 100,0 95,85 0,85" fill="#e4022e"></polygon>
         </svg>
         <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
