--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=1200, initial-scale=1.0"/>
   <title>Match Poster Generator</title>
   <link rel="stylesheet" href="style.css" />
-  https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
