--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 
         <div class="matchday-bar-container">
-          <svg class="matchday-bar" viewBox="0 0 100 85" preserveAspectRatio="none">
-            <polygon id="matchday-bar-shape" points="0,0 100,0 95,85 0,85" fill="#e4022e"></polygon>
+          <svg class="matchday-bar" viewBox="0 0 1080 85" preserveAspectRatio="none">
+            <polygon points="0,0 1080,0 1030,85 0,85" fill="#e4022e"></polygon>
           </svg>
           <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
         </div>
