--- a/index.html
+++ b/index.html
@@ -68,41 +68,39 @@
       </div>
     </form>
 
-    <div class="poster-wrapper">
-      <div class="poster" id="poster">
-        <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
+    <div class="poster" id="poster">
+      <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 
-        <div class="matchday-bar-container">
-          <svg class="matchday-bar" viewBox="0 0 1080 85" preserveAspectRatio="none">
-            <polygon points="0,0 1080,0 1030,85 0,85" fill="#e4022e"></polygon>
-          </svg>
-          <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+      <div class="matchday-bar-container">
+        <svg class="matchday-bar" viewBox="0 0 100 85" preserveAspectRatio="none">
+          <polygon id="matchday-bar-shape" points="0,0 90,0 85,85 0,85" fill="#e4022e"></polygon>
+        </svg>
+        <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
+      </div>
+
+      <div class="logos">
+        <img id="logoA" class="logo left" src="" alt="Logo gospodarza" />
+        <img id="logoB" class="logo right" src="" alt="Logo gości" />
+      </div>
+
+      <div class="vs-bar" id="vs-bar">
+        <div class="team team-left" id="teamA">Drużyna A</div>
+        <div class="vs">VS</div>
+        <div class="team team-right" id="teamB">Drużyna B</div>
+      </div>
+
+      <div class="info-bar" id="info-bar">
+        <div class="info">
+          <img src="assets/icons/calendar.svg" alt="Data" />
+          <span id="date">2025-08-12</span>
         </div>
-
-        <div class="logos">
-          <img id="logoA" class="logo left" src="" alt="Logo gospodarza" />
-          <img id="logoB" class="logo right" src="" alt="Logo gości" />
+        <div class="info">
+          <img src="assets/icons/clock.svg" alt="Godzina" />
+          <span id="time">18:00</span>
         </div>
-
-        <div class="vs-bar" id="vs-bar">
-          <div class="team team-left" id="teamA">Drużyna A</div>
-          <div class="vs">VS</div>
-          <div class="team team-right" id="teamB">Drużyna B</div>
-        </div>
-
-        <div class="info-bar" id="info-bar">
-          <div class="info">
-            <img src="assets/icons/calendar.svg" alt="Data" />
-            <span id="date">2025-08-12</span>
-          </div>
-          <div class="info">
-            <img src="assets/icons/clock.svg" alt="Godzina" />
-            <span id="time">18:00</span>
-          </div>
-          <div class="info">
-            <img src="assets/icons/pin.svg" alt="Miejsce" />
-            <span id="location">Stadion Narodowy</span>
-          </div>
+        <div class="info">
+          <img src="assets/icons/pin.svg" alt="Miejsce" />
+          <span id="location">Stadion Narodowy</span>
         </div>
       </div>
     </div>
