--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="matchday-bar-container">
         <svg class="matchday-bar" viewBox="0 0 1200 85" preserveAspectRatio="none">
-          <polygon points="0,0 1200,0 1080,85 0,85" fill="#002b5c" />
+          <polygon points="0,0 1200,0 1080,85 0,85"" />
         </svg>
         <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
       </div>
