--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Rodzaj meczu:
 <div class="poster" id="poster">
 <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 <div class="matchday-bar-container">
+   <polygon points="0,0 1200,0 1080,85 0,85"" />
 <div class="matchday-bar" id="matchday-bar"></div>
 <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
 </div>
