--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ Rodzaj meczu:
 <div class="poster" id="poster">
 <img id="corner-logo" src="assets/logo_liga.png" alt="Logo typu" />
 <div class="matchday-bar-container">
-   <polygon points="0,0 1200,0 1080,85 0,85"" />
-<div class="matchday-bar" id="matchday-bar"></div>
+   <svg class="matchday-bar" viewBox="0 0 1200 85" preserveAspectRatio="none">
+          <polygon points="0,0 1200,0 1080,85 0,85"" />
+        </svg>
 <div class="matchday" id="matchday">1. kolejka "B" Klasa</div>
 </div>
 
